# EndianSwapUtility

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
example/: CMakeLists.txt
example/include/: example.h
example/src/: example.cpp
include/: endian_swap_utility.h
include/endian_swap_utility/: endian_swap_utility.h
test/: CMakeLists.txt
test/src/: test_swap_endian.cpp
